<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SplashActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:src="@drawable/profile"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <LinearLayout style="@style/customLinearLayout">

        <TextView
            android:id="@id/tvSplashNumberLabel"
            style="@style/tvLabel"
            android:text="@string/splash_student_number_label" />

        <TextView
            android:id="@id/tvSplashNumberText"
            style="@style/tvText"
            android:text="@string/splash_student_number_text" />
    </LinearLayout>


    <LinearLayout style="@style/customLinearLayout">

        <TextView
            android:id="@id/tvSplashNameLabel"
            style="@style/tvLabel"
            android:text="@string/splash_student_name_label" />

        <TextView
            android:id="@id/tvSplashNameText"
            style="@style/tvText"
            android:text="@string/splash_student_name_text" />
    </LinearLayout>

    <LinearLayout style="@style/customLinearLayout">

        <TextView
            android:id="@id/tvSplashCityLabel"
            style="@style/tvLabel"
            android:text="@string/splash_student_city_label" />

        <TextView
            android:id="@id/tvSplashCityText"
            style="@style/tvText"
            android:text="@string/splash_student_city_text" />
    </LinearLayout>


</LinearLayout>